--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment Solutions</title>
 
-<a href="module2-solution/index.html> module2-solution </a>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <a href="module2-solution/index.html> module2-solution </a>
 
   <a href="module3-solution/index.html> module3-solution </a>
 
   
-
-  
+  </body>
 </html>
