--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="module2-solution/index.html>module2-solution</a>
+    <a href="module2-solution/index.html">module2-solution</a>
 
-    <a href="module3-solution/index.html>module3-solution</a>
+    <a href="module3-solution/index.html">module3-solution</a>
 
   
   </body>
